# frassecoin

./: .gitignore  Cargo copy.toml  Cargo.toml  README.md  lib.rs
.cargo/: config.toml
Backup/: lib copy.rs
Old/: lib copy.rs  lib_working_test.rs
