[package]
name = "frassecoin"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "5.1.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3", features = ["derive"], default-features = false }
scale-info = { version = "2", features = ["derive"], default-features = false }

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]

ink-as-dependency = []
e2e-tests = []

[dev-dependencies]
ink_e2e = { version = "5.1.1" }

[lib]
path = "lib.rs"


