[package]
name = "frassecoin"
version = "0.1.0"
authors = ["[DerpLady] <[nonaanon860@gmail.com]>"]
edition = "2021"

[dependencies]
ink = { version = "5.1.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3", features = ["derive"], default-features = false }
scale-info = { version = "2", features = ["derive"], default-features = false }

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]

ink-as-dependency = []
e2e-tests = []

[dev-dependencies]
ink_e2e = { version = "5.1.1" }

[lib]
name = "frassecoin"
path = "lib.rs"

[profile.dev]       # what you get from `cargo build`
debug = 1           # 0 = no debug info, 1 = line tables only (much smaller), 2 = full debug (huge)
incremental = true  # incremental builds faster, but can take more disk

[profile.release]   # what you get from `cargo build --release` or `cargo contract build --release`
debug = 0           # strip debug symbols completely (default = 0)
lto = "thin"        # link-time optimization (slightly bigger compile times, smaller/faster binaries)
codegen-units = 1   # better optimization, fewer duplicate artifacts
